# Glass

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LANG.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  glass.py  playground.html  pyproject.toml  quartz.py
.claude/: settings.json
.claude/hooks/: dogfood-canary.sh
.github/workflows/: tests.yml
docs/: README.md  audit-readiness.md  design-notes.md  effects-in-proofs.md  getting-started.md  language-tour.md  migration.md  parameters.md  playground.md  quartz.md  repl.md  roadmap.md  self-hosting.md  semantics.md  soundness.md  the-story.md  tier1-soundness-proof.md  tier1-wip-soundness.md  tier1-zk-design.md
examples/: README.md
examples/basic/: README.md  fib.glass  hello.glass  list_ops.glass  option_result.glass  records.glass
examples/features/: README.md  ai.glass  alpha_refine.glass  and_or.glass  crypto.glass  curried_refine.glass  curried_refine_bad.glass  effects.glass  generic_fn.glass  generic_rec.glass  generics.glass  imply_refine.glass  imports.glass  infer.glass  lambda_multi.glass  lambda_multi_refine.glass  lambda_refine.glass  lambda_refine_bad.glass  letpat.glass  letqmark.glass  letstar.glass  linear_clone.glass  linear_ok.glass  mod_refine.glass  not_refine.glass  parens_after_let.glass  queries.glass  refine.glass  return_refine.glass  return_refine_bad.glass  runtime_refine.glass  runtime_refine_bad.glass  safe_div.glass  xparam_refine.glass  xparam_refine_bad.glass
examples/frost/: README.md  frost.glass  frost_air.glass  frost_commit.glass  (+28 more)
tests/: test_glass.py
(+132 files in other folders)
